--- a/vmb/src/vram/Makefile
+++ b/vmb/src/vram/Makefile
@@ -1,10 +1,9 @@
 PROG= vram
 UTILDIR = ../util
-OPTDIR = ../opt
 INSTALLDIR=../bin
 
-CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR) -I/usr/X11R6/include
-LDFLAGS= -L/usr/X11R6/lib -lX11 -L$(OPTDIR) -lvmbopt -L$(UTILDIR) -lvmb -lpthread
+CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR) -I/usr/X11R6/include
+LDFLAGS= -L/usr/X11R6/lib -lX11 -L$(UTILDIR) -lvmb -lpthread
 CC = gcc
 
 
@@ -12,8 +11,6 @@ all: $(PROG) TAGS
 
 utilities:
 	$(MAKE) -C  $(UTILDIR)
-	$(MAKE) -C  $(OPTDIR)
-
 
 $(PROG): $(PROG).c utilities
 	$(CC) $(CFLAGS) $(PROG).c $(LDFLAGS) -o $(PROG)
@@ -22,7 +19,7 @@ install: all
 	install $(PROG) $(INSTALLDIR)
 
 
-TAGS: *.c $(UTILDIR)/*.c $(UTILDIR)/*.h $(OPTDIR)/*.c $(OPTDIR)/*.h
+TAGS: *.c $(UTILDIR)/*.c $(UTILDIR)/*.h 
 	etags *.c $(UTILDIR)/*.c $(UTILDIR)/*.h
 
 clean:
