--- a/vmb/src/mmixide/mmixide.rc
+++ b/vmb/src/mmixide/mmixide.rc
@@ -186,21 +186,22 @@ BEGIN
     CONTROL         "Use \\t, \\n, \\r, and \\xFF",IDC_CHECK_ESC,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,97,49,94,10
 END
 
-IDD_OPTIONS_ASSEMBLER DIALOGEX 0, 0, 186, 90
+IDD_OPTIONS_ASSEMBLER DIALOGEX 0, 0, 186, 100
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTERMOUSE | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Assembler Options"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,129,7,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,129,24,50,14
+    DEFPUSHBUTTON   "OK",IDOK,130,7,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,130,24,50,14
     LTEXT           "Buffer size",IDC_STATIC,7,9,50,8
     EDITTEXT        IDC_BUFFERSIZE,63,7,56,14,ES_AUTOHSCROLL
     CONTROL         "",IDC_SPIN_BUFFERSIZE,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,63,7,11,14
     CONTROL         "Expanded address calculations",IDC_CHECK_X,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,23,112,10
-    CONTROL         "Create listing file",IDC_CHECK_LISTING,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,39,112,10
-    CONTROL         "Auto assemble",IDC_CHECK_AUTOASSEMBLE,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,55,112,10
+    CONTROL         "Create listing file",IDC_CHECK_LISTING,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,38,112,10
+    CONTROL         "Auto assemble",IDC_CHECK_AUTOASSEMBLE,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,68,112,10
     CONTROL         "Auto close error list",IDC_CHECK_AUTOCLOSE_ERRORS,
-                    "Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,71,112,10
+                    "Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,83,112,10
+    CONTROL         "Treat Warnings as Errors",IDC_CHECK_WARNERROR,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,53,112,10
 END
 
 IDD_OPTIONS_EDITOR DIALOGEX 0, 0, 186, 90
@@ -280,7 +281,8 @@ BEGIN
     DEFPUSHBUTTON   "OK",IDOK,275,7,50,15
     CONTROL         "Load single file",IDC_CHECK_SINGLEFILE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,70,10,115,10
     LTEXT           "Full name",IDC_TAB_FULLNAME,20,50,299,8
-    CONTROL         "Assemble and read symbol table",IDC_CHECK_SYMBOLS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,20,65,119,10
+    CONTROL         "Assemble and read symbol table",IDC_CHECK_SYMBOLS,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,20,65,119,10
     CONTROL         "Load mmo file",IDC_CHECK_LOADMMO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,20,80,59,10
 #ifdef VMB	
     CONTROL         "Create image file",IDC_CHECK_IMAGEFILE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,20,95,70,10
@@ -359,9 +361,9 @@ BEGIN
     IDD_OPTIONS_ASSEMBLER, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 179
+        RIGHTMARGIN, 180
         TOPMARGIN, 7
-        BOTTOMMARGIN, 83
+        BOTTOMMARGIN, 93
     END
 
     IDD_OPTIONS_EDITOR, DIALOG
